# FLY_VideoAutomation_V2

./: .editorconfig  .gitignore  BLOCKERS.md  CLAUDE.md  PROGRESS.md  README.md  pre-commit-config.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: disk_watcher.rs  ipc.rs  lib.rs  main.rs  sidecar.rs
app/ui/: .env.example  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  (+3 more)
backend/: README.md  fly-backend.spec  launcher.py  pyproject.toml  run-dev.sh
backend/src/fly_backend/: __init__.py  context.py  disk_poller.py  errors.py  logging.py  main.py  orchestrator.py  runtime.py  secrets.py  settings.py
backend/src/fly_backend/behaviors/: progress.py
backend/src/fly_backend/behaviors/copy_media/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/detect_card/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/extract_frames/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/list_today_customers/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/make_share_link/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/resolve_drive_folder/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/start_session/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/upload_to_drive/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/verify_upload/: contract.py  handler.py  tests.py
backend/src/fly_backend/behaviors/wipe_card/: contract.py  handler.py  tests.py
backend/src/fly_backend/http/: auth.py  integrations_routes.py  routes.py
backend/src/fly_backend/integrations/: composio_calendar.py  composio_client.py  composio_drive.py  ffmpeg.py
backend/src/fly_backend/persistence/: db.py  models.py
backend/src/fly_backend/util/: disk.py  hashing.py  remote_paths.py
backend/tests/: conftest.py
backend/tests/unit/: test_calendar_parser.py  test_disk.py  test_disk_poller.py  test_drive_folder_parser.py  test_extract_frames_preflight.py  test_hashing.py  test_health.py  test_integrations_routes.py  test_orchestrator.py  test_routes_recent_and_clear.py  test_runtime.py  test_secrets.py  test_settings.py  test_setup_oauth.py
scripts/: build-sidecar.sh  dev.sh  package.sh  setup.sh
(+25 files in other folders)
