[project]
name = "fly-backend"
version = "0.1.0"
description = "FLY Video Automation V2 — Python sidecar (FastAPI). See ../CLAUDE.md."
requires-python = ">=3.11,<3.14"
readme = "README.md"
authors = [{ name = "Ronaldo Tkotz" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "structlog>=24.4",
    "httpx>=0.27",
    "ffmpeg-python>=0.2.0",
    "composio-core>=0.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "freezegun>=1.5",
]

[project.scripts]
fly-backend = "fly_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fly_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/fly_backend/behaviors"]
python_files = ["tests.py", "test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
